# cross-everything

./: .biomeignore  .gitignore  AGENTS.md  README.md  biome.json  index.html  package-lock.json  package.json
.cursor/rules/: specify-rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
.opencode/command/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-file-name-path-regex-mvp-everything-ui-search-input-list-view-name-path-size-date-modified-tauri-react-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-file-explorer-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: explorer.rs  index.rs  lib.rs  main.rs  search.rs  watcher.rs
src-tauri/tests/: explorer_test.rs
src/components/: ErrorDialog.tsx  FileList.test.tsx  FileList.tsx  SearchInput.test.tsx  SearchInput.tsx  Settings.test.tsx  Settings.tsx
src/hooks/: useAutostart.test.ts  useAutostart.ts  useFileExplorer.test.ts  (+5 more)
(+7 files in other folders)
